--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "@wangeditor/editor": "5.1.1",
     "@wangeditor/editor-for-vue": "5.1.12",
     "axios": "0.26.1",
+    "cropperjs": "1.5.12",
     "echarts": "5.3.2",
-    "element-plus": "2.2.36",
+    "element-plus": "^2.8.4",
     "mitt": "3.0.0",
     "nprogress": "0.2.0",
     "pinia": "2.0.16",
     "print-js": "1.6.0",
     "qrcode.vue": "3.3.3",
     "qs": "6.10.3",
+    "typescript": "^4.7.4",
     "vue": "3.2.37",
-    "cropperjs": "1.5.12",
     "vue-i18n": "9.1.9",
     "vue-router": "4.0.16"
   },
@@ -41,7 +42,6 @@
     "eslint-plugin-vue": "8.6.0",
     "prettier": "2.6.2",
     "sass": "1.50.1",
-    "typescript": "4.7.4",
     "unplugin-vue-components": "0.19.3",
     "vite": "3.0.8",
     "vite-plugin-svg-icons": "2.0.1",
